# zemaxglass

./: .gitignore  ZemaxGlass.py  pyproject.toml
AGF_files/: hoya.agf  nikon.agf
src/ZemaxGlass/: ZemaxGlass.py  __init__.py
